documentation last details
